--- a/assets/stylesheets/shared/_color-schemes.scss
+++ b/assets/stylesheets/shared/_color-schemes.scss
@@ -235,7 +235,7 @@
 	--color-telegram: #{$color-telegram};
 	--color-whatsapp: #{$color-whatsapp};
 	--color-wordpress-org: #{$color-wordpressOrg};
-	
+
 	--color-section-nav-item-background-hover: #{$muriel-blue-0};
 	--color-themes-active-text: #{$muriel-blue-0};
 	--color-themes-active-text-rgb: #{hex-to-rgb( $muriel-blue-0 )};
@@ -246,10 +246,10 @@
 	--masterbar-color: #{$muriel-white};
 	--masterbar-border-color: #{$gray-lighten-10};
 	--masterbar-item-new-editor-background: #{$gray-darken-20};
-	--masterbar-item-new-editor-hover-background: #{$gray-darken-10};
-	--masterbar-toggle-drafts-editor-background: #{$gray-darken-10};
+	--masterbar-item-new-editor-hover-background: #{$muriel-gray-400};
+	--masterbar-toggle-drafts-editor-background: #{$muriel-gray-400};
 	--masterbar-toggle-drafts-editor-border-color: #{$gray-lighten-20};
-	--masterbar-toggle-drafts-editor-hover-background: #{$gray-darken-10};
+	--masterbar-toggle-drafts-editor-hover-background: #{$muriel-gray-400};
 
 	--sidebar-background: #{$muriel-white};
 	--sidebar-background-gradient: #{hex-to-rgb( $muriel-white )};
@@ -336,10 +336,10 @@
 		--masterbar-color: #{$muriel-white};
 		--masterbar-border-color: #{$gray-lighten-10};
 		--masterbar-item-new-editor-background: #{$gray-darken-20};
-		--masterbar-item-new-editor-hover-background: #{$gray-darken-10};
-		--masterbar-toggle-drafts-editor-background: #{$gray-darken-10};
+		--masterbar-item-new-editor-hover-background: #{$muriel-gray-400};
+		--masterbar-toggle-drafts-editor-background: #{$muriel-gray-400};
 		--masterbar-toggle-drafts-editor-border-color: #{$gray-lighten-20};
-		--masterbar-toggle-drafts-editor-hover-background: #{$gray-darken-10};
+		--masterbar-toggle-drafts-editor-hover-background: #{$muriel-gray-400};
 
 		--sidebar-background: #{$muriel-gray-50};
 		--sidebar-background-gradient: #{hex-to-rgb( $muriel-gray-50 )};
@@ -397,10 +397,10 @@
 		--masterbar-color: #{$muriel-white};
 		--masterbar-border-color: #{$gray-lighten-10};
 		--masterbar-item-new-editor-background: #{$gray-darken-20};
-		--masterbar-item-new-editor-hover-background: #{$gray-darken-10};
-		--masterbar-toggle-drafts-editor-background: #{$gray-darken-10};
+		--masterbar-item-new-editor-hover-background: #{$muriel-gray-400};
+		--masterbar-toggle-drafts-editor-background: #{$muriel-gray-400};
 		--masterbar-toggle-drafts-editor-border-color: #{$gray-lighten-20};
-		--masterbar-toggle-drafts-editor-hover-background: #{$gray-darken-10};
+		--masterbar-toggle-drafts-editor-hover-background: #{$muriel-gray-400};
 
 		--sidebar-background: #{$muriel-gray-900};
 		--sidebar-background-gradient: #{hex-to-rgb( $muriel-gray-900 )};
