--- a/assets/stylesheets/shared/mixins/_heading.scss
+++ b/assets/stylesheets/shared/mixins/_heading.scss
@@ -1,10 +1,9 @@
-
 // ==========================================================================
 // Heading mixin
 // ==========================================================================
 
 @mixin heading {
-	color: $gray-darken-20;
+	color: var( --color-neutral-500 );
 	font-size: rem( 20px );
 	font-weight: 300;
 	margin: 1em 0;
