--- a/client/post-editor/media-modal/detail/style.scss
+++ b/client/post-editor/media-modal/detail/style.scss
@@ -1,4 +1,3 @@
-
 @import 'components/screen-reader-text/style';
 
 .editor-media-modal-detail .header-cake.card {
@@ -81,7 +80,7 @@
 	}
 
 	&:hover {
-		background-color: rgba( $gray-darken-20, 0.9 );
+		background-color: rgba( var( --muriel-gray-500-rgb ), 0.9 );
 	}
 }
 
