--- a/client/my-sites/domains/domain-management/components/icann-verification/style.scss
+++ b/client/my-sites/domains/domain-management/components/icann-verification/style.scss
@@ -27,7 +27,7 @@
 }
 
 .icann-verification__sent-to {
-	color: var( --muriel-gray-500 );
+	color: var( --color-neutral-500 );
 	font-size: 14px;
 }
 
@@ -53,7 +53,7 @@
 			margin-right: 0;
 		}
 		&.is-busy:disabled {
-			color: var( --muriel-gray-500 );
+			color: var( --color-neutral-500 );
 		}
 	}
 
