--- a/client/post-editor/media-modal/detail/style.scss
+++ b/client/post-editor/media-modal/detail/style.scss
@@ -80,7 +80,7 @@
 	}
 
 	&:hover {
-		background-color: rgba( var( --muriel-gray-500-rgb ), 0.9 );
+		background-color: rgba( var( --color-neutral-500-rgb ), 0.9 );
 	}
 }
 
