--- a/client/my-sites/checkout/checkout-thank-you/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/style.scss
@@ -295,7 +295,7 @@
 	}
 
 	.thank-you-card__price {
-		color: $gray-darken-30;
+		color: var( --color-neutral-600 );
 	}
 
 	.thank-you-card__description {
