--- a/client/components/date-picker/style.scss
+++ b/client/components/date-picker/style.scss
@@ -1,4 +1,3 @@
-
 $date-picker_caption_height: 50px;
 $date-picker_nav_button_size: 20px;
 
@@ -37,7 +36,7 @@ $date-picker_nav_button_size: 20px;
 	width: 100%;
 
 	&::after {
-		@include long-content-fade( $color: hex-to-rgb( $gray-darken-30 ) );
+		@include long-content-fade( $color: var( --color-neutral-600-rgb ) );
 	}
 }
 
